[package]
name = "enr"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2021"
version = "0.12.0"
description = "Rust implementation of Ethereum Node Record (ENR) EIP778"
readme = "./README.md"
keywords = ["ethereum", "enr", "record", "EIP778", "node"]
repository = "https://github.com/sigp/enr"
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
exclude = [".gitignore", ".github/*"]

[dependencies]
alloy-rlp = "0.3.4"
base64 = "0.21"
bytes = "1"
hex = "0.4.3"
log = "0.4.21"
rand = "0.8"
zeroize = "1.7.0"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.1.1", optional = true, features = ["rand_core"] }
secp256k1 = { version = "0.28", optional = true, default-features = false, features = [
    "global-context",
] }

[dev-dependencies]
alloy-rlp = { version = "0.3.4", features = ["derive"] }
secp256k1 = { version = "0.28", features = ["rand-std"] }
serde_json = "1.0"

[features]
default = ["serde", "k256"]
serde = ["dep:serde"]
k256 = ["dep:k256"]
ed25519 = ["dep:ed25519-dalek"]
secp256k1 = ["rust-secp256k1"]
rust-secp256k1 = ["dep:secp256k1"]

[lib]
name = "enr"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
